--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "jquery": "^3.6.0"
+    "chai": "^4.3.6",
+    "jquery": "^3.6.0",
+    "mocha": "^9.2.2"
   },
   "name": "promineo",
   "description": "\"# Promineo\"",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
