--- a/Week10/W10-Project/package.json
+++ b/Week10/W10-Project/package.json
@@ -1,7 +1,6 @@
 {
   "name": "w10-project",
   "version": "1.0.0",
-  "description": "",
   "main": "teamapp.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,6 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0"
-  }
+  },
+  "description": ""
 }
