--- a/Week11/package.json
+++ b/Week11/package.json
@@ -1,7 +1,6 @@
 {
   "name": "week11",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +9,6 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.6.0"
-  }
+  },
+  "description": ""
 }
