--- a/Week14/movie-app/package.json
+++ b/Week14/movie-app/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.0.2",
+    "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
