--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "react-bootstrap": "^2.4.0",
+    "react-router-dom": "^6.3.0",
     "reactstrap": "^9.0.2"
   }
 }
