--- a/Week18/w18-final-project/package.json
+++ b/Week18/w18-final-project/package.json
@@ -10,8 +10,11 @@
     "r1-horizontal-scroll": "^1.6.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-horizontal-scroll": "^6.0.0",
+    "react-horizontal-scrolling-menu": "^2.8.2",
     "react-script": "^2.0.5",
     "react-scripts": "^2.1.3",
+    "react-sticky-el": "^2.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
