--- a/Week18/w18-final-project/package.json
+++ b/Week18/w18-final-project/package.json
@@ -12,8 +12,9 @@
     "react-dom": "^18.1.0",
     "react-horizontal-scroll": "^6.0.0",
     "react-horizontal-scrolling-menu": "^2.8.2",
+    "react-router-dom": "^6.3.0",
     "react-script": "^2.0.5",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "react-sticky-el": "^2.0.9",
     "web-vitals": "^2.1.4"
   },
