--- a/Week18/w18-final-project/package.json
+++ b/Week18/w18-final-project/package.json
@@ -6,15 +6,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "node": "^17.7.2",
     "r1-horizontal-scroll": "^1.6.4",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-horizontal-scroll": "^6.0.0",
     "react-horizontal-scrolling-menu": "^2.8.2",
     "react-router-dom": "^6.3.0",
     "react-script": "^2.0.5",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-sticky-el": "^2.0.9",
     "web-vitals": "^2.1.4"
   },
